# gtk-layer-shell

./: .editorconfig  .gitignore  AUTHORS  CHANGELOG.md  COPYING  LICENSE_MIT.txt  Makefile.am  NEWS  README.md  autogen.sh  compatibility.md  configure.ac  meson.build  meson_options.txt  release_process.md  run-meson.sh
.github/: pull_request_template.md
.github/workflows/: build.yml  build_and_test.yml  check_file_licenses.yml  check_pr.yml  deploy_docs.yml
demo/: Makefile.am  anchor-control.c  gtk-layer-demo.c  gtk-layer-demo.h  layer-selection.c  margin-control.c  menu-bar.c  meson.build  monitor-selection.c  mscl-toggles.c  version-info.c
doc/: gtk-layer-shell-docs.sgml  gtk-layer-shell.types  meson.build
doc/xml/: meson.build
example/: Makefile.am  anchor-control.c  anchor_control.c  example.c  example.h  layer-selection.c  layer_selection.c  main.c  margin-control.c  menu-bar.c  meson.build  mscl-toggles.c
examples/: meson.build  simple-example.c  simple-example.py
examples/demo/: anchor-control.c  gtk-layer-demo.c  gtk-layer-demo.h  keyboard-selection.c  layer-selection.c  margin-control.c  menu-bar.c  meson.build  monitor-selection.c  mscl-toggles.c  version-info.c
examples/vala-standalone/: README.md  main.vala  meson.build
gtk-priv/: README.md  meson.build
gtk-priv/h/: common.h  gdk_geometry_priv.h  gdk_surface_class_priv.h  gdk_surface_priv.h  gdk_wayland_pointer_data_priv.h  gdk_wayland_pointer_frame_data_priv.h  gdk_wayland_seat_priv.h  gdk_wayland_surface_class_priv.h  gdk_wayland_surface_priv.h  gdk_wayland_tablet_data_priv.h  gdk_wayland_touch_data_priv.h  gdk_window_impl_class_priv.h  gdk_window_impl_priv.h  gdk_window_impl_wayland_class_priv.h  gdk_window_impl_wayland_priv.h  gdk_window_priv.h
gtk-priv/scripts/: ast.py  build.py  code.py  config.py  parse.py  repo.py  version.py
include/: Makefile.am  gtk-layer-shell-0.pc.in  gtk-layer-shell.h  header.h  meson.build
protocol/: meson.build
src/: Makefile.am  api.c  check_license.py  custom-shell-surface.c  custom-shell-surface.h  gdk-window-hack.c  gdk-window-hack.h  gtk-layer-shell.c  gtk-priv-access.c  gtk-priv-access.h  gtk-wayland.c  gtk-wayland.h  layer-surface.c  layer-surface.h  lib.c  libwayland-wrappers.c  libwayland-wrappers.h  meson.build  simple-conversions.c  simple-conversions.h  wayland-utils.c  wayland-utils.h  xdg-popup-surface.c  xdg-popup-surface.h  xdg-toplevel-surface.c  xdg-toplevel-surface.h
src/protocol/: Makefile.am  meson.build  wlr-layer-shell-unstable-v1.xml
test/: README.md  check-all-tests-are-in-meson.py  check-licenses.py  license-ignore.txt  meson.build  run-integration-test.py  run-test.py  tests-not-enabled.py
test/integration-test-common/: integration-test-common.c  integration-test-common.h  meson.build
test/integration-tests/: meson.build  test-adapts-to-screen-size.c  test-anchors.c  test-appears-if-size-initially-unspecified.c  test-auto-exclusive-zone-no-margin.c  test-auto-exclusive-zone-weird-bool-values.c  test-auto-exclusive-zone-with-margin.c  test-close-layer-surface.c  test-closed-before-configure.c  test-configure-delay.c  test-create-subsurface.c  test-creation-properties.c  test-exclusive-zone-below-negative-1.c  test-expect-fail.c  test-get-auto-exclusive-zone.c  test-get-explicit-exclusive-zone.c  test-get-keyboard-interactivity-types.c  test-get-keyboard-interactivity.c  test-get-keyboard-mode.c  test-get-layer.c  test-get-monitor.c  test-get-namespace-custom-namespace.c  test-get-namespace-default.c  test-get-namespace-on-non-layer-window.c  test-immediate-close.c  test-is-layer-window.c  test-is-supported-true.c  test-menu-popup.c  test-monitor-cascade-remap.c  test-monitor-change-closed-before-configure.c  test-monitor-change-during-configure-wait.c  test-monitor-destroyed-before-configure.c  test-multi-anchors.c  test-nested-popup-configure-delay-expect-fail.c  test-nested-popup-configure-delay.c  test-nested-popup-unmap-order.c  test-nested-popup.c  test-only-output-removed.c  test-popup-honors-compositor-configure-size.c  test-rapid-monitor-changes.c  (+11 more)
test/mock-server/: compositor.c  layer-shell.c  meson.build  mock-server.c  mock-server.h  overrides.c  request-overrides.c  seat.c  shm.c  xdg-shell.c
test/test-client-common/: meson.build  test-client-common.c  test-client-common.h
test/test-clients/: basic-test.c  meson.build  test-adapts-to-screen-size.c  test-anchors.c  test-auto-exclusive-zone-no-margin.c  test-auto-exclusive-zone-weird-bool-values.c  test-auto-exclusive-zone-with-margin.c  test-close-layer-surface.c  test-creation-properties.c  test-expect-fail.c  test-get-auto-exclusive-zone.c  test-get-explicit-exclusive-zone.c  test-get-keyboard-interactivity.c  test-get-layer.c  test-get-monitor.c  test-get-namespace-custom-namespace.c  test-get-namespace-default.c  test-get-namespace-on-non-layer-window.c  test-is-layer-window.c  test-is-supported-true.c  test-menu-popup.c  test-set-keyboard-interactivity.c  test-set-layer.c  test-set-monitor.c  test-set-size-request.c  test-window-with-initially-attached-buffer.c
test/test-common/: meson.build  test-common.h
test/unit-tests/: meson.build  test-get-version.c
