option('examples', type: 'boolean', value: false, description: 'Build example applications')
option('docs', type: 'boolean', value: false, description: 'Build devhelp API documentation')
option('introspection', type: 'boolean', value: true, description: 'Build GObject introspection data')
option('tests', type: 'boolean', value: false, description: 'Build tests')
