integration_tests = [
    'test-is-supported-true',
    'test-expect-fail',
    'test-creation-properties',
    'test-is-layer-window',
    'test-single-anchors',
    'test-multi-anchors',
    'test-set-anchor-normalizes-booleans',
    'test-set-layer',
    'test-get-layer',
    'test-set-size-request',
    'test-adapts-to-screen-size',
    'test-auto-exclusive-zone-no-margin',
    'test-auto-exclusive-zone-with-margin',
    'test-auto-exclusive-zone-weird-bool-values',
    'test-get-explicit-exclusive-zone',
    'test-get-auto-exclusive-zone',
    'test-exclusive-zone-below-negative-1',
    'test-menu-popup',
    'test-window-with-initially-attached-buffer',
    'test-close-layer-surface',
    'test-get-namespace-default',
    'test-get-namespace-on-non-layer-window',
    'test-get-namespace-custom-namespace',
    'test-set-keyboard-interactivity',
    'test-set-keyboard-mode',
    'test-get-keyboard-interactivity',
    'test-get-keyboard-mode',
    'test-get-monitor',
    'test-set-monitor',
    'test-create-subsurface',
]
